--- a/css/app.css
+++ b/css/app.css
@@ -18,6 +18,7 @@ body {
   h1 {
     color: #3498db;
     font-weight: 900;
+    text-align: center;
   }
   
   p {
@@ -94,6 +95,9 @@ body {
   a {
     display: block;
     margin: 32px 0;
-    color: #24b47e;
+    font-size: 18px;
+    text-align: center;
+    color: #3498db;
+    text-decoration: none;
   }
   
